@@ -1,4 +1,6 @@
 0.1.6 - 
+ * Improved Deezer tab mechanism to allow reuse
+ * Bug fixes for notif always on: close notif if no Deezer tab opened / re-open notif if closed
  * Added jump to Deezer feature
 
 0.1.5 - 05 Oct 2012
